--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       <div class="col-sm-8 p-0">
         <section class="vintage">
           <div class="container-fluid">
-            <h2> Vintage Collections</h2>
-            <p> WE also have wide range of vintage cars which are more vintage than any vintage cars u see anywhere..They are the vintage if vintage</p>
+            <h2 class="vintage-text"> Vintage Collections</h2>
+            <p style="padding-right: 270px;"> WE also have wide range of vintage cars which are more vintage than any vintage cars u see anywhere..They are the vintages of Vintage</p>
             <a href="#" class="btn btn-outline-light">Read more</a>
           </div>
         </section>
@@ -195,22 +195,26 @@
             <label for="formFileMultiple" class="form-label">Proof of Identification</label>
             <input class="form-control" type="file" id="formFileMultiple" multiple>
           </div>
-          <div class="form-floating mb-2">
-            <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
-              <option selected>Cars awaiting</option>
-              <option value="1">Lamborghini</option>
-              <option value="2">Sedan</option>
-              <option value="3">Coupe</option>
-            </select>
-            <label for="floatingSelect">Choose your Perfect Car!!</label>
-          
-          <select class="form-select mb-2 pl-4 pt-4" aria-label="Default select example">
-            <option selected>Availaible in the range</option>
-            <option value="1">$1000</option>
-            <option value="2">$2000</option>
-            <option value="3">$3000</option>
-            </select>
-          </div>
+            <div class="row">
+              <div class="col-sm-8">
+                <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                  <option selected>Your Dream Car</option>
+                  <option value="1">Lamborghini</option>
+                  <option value="2">Sedan</option>
+                  <option value="3">Coupe</option>
+                  <option value="3">Dream big and go to a car dealer to but car</option>
+                </select>
+              </div>
+
+              <div class="col-sm-4">
+              <select class="form-select mb-2 " aria-label="Default select example">
+                <option selected>Availaible in the range</option>
+                <option value="1">$1000</option>
+                <option value="2">$2000</option>
+                <option value="3">$3000</option>
+                </select>
+             </div>
+            </div>
           <div class="mb-3 ">
               <label for="exampleFormControlTextarea1" class="form-label">Comment here</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
@@ -220,6 +224,29 @@
     </div>
   </div>
 </section>
+<!-- Beginning of Counter section-->
+    <section class="counter-section" id="counter">
+      <div class="countainer">
+          <div class="row">
+              <div class="col text-center">
+                <i class="fas fa-truck-moving"></i><br>
+                  <span class="counter">29 </span>K+
+                  <h1 style="color: aqua;">Cars Sold</h1>
+              </div>
+              <div class="col text-center">
+                <i class="fas fa-headset"></i><br>
+                  <span class="counter">2021</span>+
+                  <h1 style="color: aqua;">Call Centers world-wide</h1>
+              </div>
+              <div class="col text-center">
+                  <i class="fab fa-google-pay" id="fab"></i><br>
+                  ₹<span class="counter">100 </span>k+
+                  <h1 style="color: aqua;">Donation recieved</h1>
+              </div>
+          </div>
+      </div>
+   </section>
+  <!--End of counter Section-->
 
     <!-- Beginning of footer -->
     <footer class="footer">
@@ -246,6 +273,7 @@
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
       <script src="Javascript.js"> </script>
+      <script src="count123.js"></script>
    
   </body>
 </html>
