--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="icon" href="Images/Cars logo.png" type="image/x-icon">
     <title>MAVIHSS!!</title>
@@ -101,6 +103,12 @@
       </div>
       <div class="col-sm-4 p-0">
 
+        <section class="customs">
+          <h2 id="customss">Customss</h2>
+          <p style="font-size: 20px;">For customizing your fav car</p>
+          <a href="#" class="btn btn-outline-dark">Contact here.</a>
+          <img src="Images/Custom_cars.jpg" style="width: 450px; padding: 15px;" >
+        </section>
       </div>
     </div>
   </div>
@@ -223,7 +231,7 @@
       </div>
     </div>
   </div>
-</section>
+</section><hr>
 <!-- Beginning of Counter section-->
     <section class="counter-section" id="counter">
       <div class="countainer">
@@ -231,23 +239,25 @@
               <div class="col text-center">
                 <i class="fas fa-truck-moving"></i><br>
                   <span class="counter">29 </span>K+
-                  <h1 style="color: aqua;">Cars Sold</h1>
+                  <h1 style="color: #23264d;">Cars Sold</h1>
               </div>
               <div class="col text-center">
                 <i class="fas fa-headset"></i><br>
                   <span class="counter">2021</span>+
-                  <h1 style="color: aqua;">Call Centers world-wide</h1>
+                  <h1 style="color: #23264d;">Call Centers world-wide</h1>
               </div>
               <div class="col text-center">
                   <i class="fab fa-google-pay" id="fab"></i><br>
                   ₹<span class="counter">100 </span>k+
-                  <h1 style="color: aqua;">Donation recieved</h1>
+                  <h1 style="color: #23264d;">Donation recieved</h1>
               </div>
           </div>
       </div>
    </section>
   <!--End of counter Section-->
-
+<div class="container text-center">
+    <a href="#home" class="btn ghost-btn">Go to top!</a>
+  </div>
     <!-- Beginning of footer -->
     <footer class="footer">
       <div class="container">
@@ -268,6 +278,7 @@
           </div>
   </footer>
   <!-- Beginning of footer section-->
+
 
       <script src="https://kit.fontawesome.com/96ab435ab5.js" crossorigin="anonymous"></script>
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
