--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="icon" href="Images/Cars logo.png" type="image/x-icon">
@@ -58,7 +59,7 @@
 <!-- MArketting Section-->
 <section class="marketting" id="market">
   <div class="container-fluid">
-    <div class="row row-cols-3">
+    <div class="row">
       <div class="col-sm-4 p-0">
         <section class="lambo">
           <img src="Images/Lamborghini.png" id="lamboimg">
@@ -95,8 +96,8 @@
         <section class="vintage">
           <div class="container-fluid">
             <h2 class="vintage-text"> Vintage Collections</h2>
-            <p style="padding-right: 270px;"> WE also have wide range of vintage cars which are more vintage than any vintage cars u see anywhere..They are the vintages of Vintage</p>
-            <a href="#" class="btn btn-outline-light">Read more</a>
+            <p class="vintage-text1"> WE also have wide range of vintage cars which are more vintage than any vintage cars u see anywhere..They are the vintages of Vintage</p>
+            <a href="#" class="btn btn-outline-light ">Read more</a>
           </div>
         </section>
       </div>
@@ -232,27 +233,27 @@
   </div>
 </section><hr>
 <!-- Beginning of Counter section-->
-    <section class="counter-section" id="counter">
-      <div class="countainer">
-          <div class="row">
-              <div class="col text-center">
+<section class="counter-section" id="counter">
+  <div class="countainer-fluid">
+      <div class="row">
+          <div class="col-sm text-center mt-3">
                 <i class="fas fa-truck-moving"></i><br>
                   <span class="counter">29 </span>K+
                   <h1 style="color: #23264d;">Cars Sold</h1>
-              </div>
-              <div class="col text-center">
+          </div>
+          <div class="col-sm text-center mt-3">
                 <i class="fas fa-headset"></i><br>
                   <span class="counter">2021</span>+
                   <h1 style="color: #23264d;">Call Centers world-wide</h1>
-              </div>
-              <div class="col text-center">
+          </div>
+          <div class="col-sm text-center mt-3">
                   <i class="fab fa-google-pay" id="fab"></i><br>
                   ₹<span class="counter">100 </span>k+
                   <h1 style="color: #23264d;">Donation recieved</h1>
-              </div>
           </div>
       </div>
-   </section>
+    </div>
+</section>
   <!--End of counter Section-->
 <div class="container text-center">
     <a href="#home" class="btn ghost-btn">Go to top!</a>
@@ -272,11 +273,11 @@
                   <a href="#" id="a-footer"><i class="fa fa-medium" aria-hidden="true"></i></a>
                   <a href="#" id="a-footer"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a>
                   <a href="#" id="a-footer"><i class="fa fa-github" aria-hidden="true"></i></a> </div>
-                  <span class="footer-span"><h6>Copyright© 2021: All right reserved<br><a href="#">Shivam Sharma</a></h6></span>
+                  <span class="footer-span mt-3"><h6>Copyright© 2021: All right reserved<br><a href="#">Shivam Sharma</a></h6></span>
               </div>
           </div>
   </footer>
-  <!-- Beginning of footer section-->
+  <!-- end of footer section-->
 
 
       <script src="https://kit.fontawesome.com/96ab435ab5.js" crossorigin="anonymous"></script>
