--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="container">
           <p style="padding-left: 30px; padding-right: 30px; font-size: 20px;"> This is a sample Lamborghini..Click here and you get a real one <br> Not seriously...<br></p>
           <a href="#" class="btn btn-outline-dark">More Info</a><br><br>
-          <img src="Images/lamboimg.jpg" style="width: 400px; padding: 20px;" >
+          <img src="Images/lamboimg.jpg" id="lamboimg1" >
           </div>
         </section>
       </div>
@@ -87,7 +87,7 @@
           <p style="font-size: 20px;">We also have great ranges of Cyberpunk cars all of which can definetrly fit in your budget</p>
           <p>*Only if you are a kid of insanely rich brat*</p>
           <a href="#" class="btn btn-outline-dark">More Info</a><br><br>
-          <img src="Images/Cyberpunk.jpg" style="width: 400px; padding: 20px;" >
+          <img src="Images/Cyberpunk.jpg" id="cybertruckimg1" >
         </section>
       </div>
     </div>
@@ -107,7 +107,7 @@
           <h2 id="customss">Customss</h2>
           <p style="font-size: 20px;">For customizing your fav car</p>
           <a href="#" class="btn btn-outline-dark">Contact here.</a>
-          <img src="Images/Custom_cars.jpg" style="width: 450px; padding: 15px;" >
+          <img src="Images/Custom_cars.jpg" id="Customs1" >
         </section>
       </div>
     </div>
