--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <h3 class="text-center">Types</h3>
   </div>
   <div class="container">
-    <div class="row m-3">
+    <div class="row m-3 roww">
       <div class="col Gallery">
           <img style="max-width: 300px;max-height: 150px;" src="Images/Rolls_Royce_Phantom_sedan.jpg" alt="Sedan">
         <h4 id="Gallery_caption">Sedan</h4>
