--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="#market">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#Available">Available Cars</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
@@ -49,7 +49,7 @@
       </div>
       <div class="col-sm-5">
         <h3 class="header3">State of the art, World class Luxury Cars with embded anti-theft Technologies</h3>
-        <a class="btn" id="btn1" style="background-color: #43beac;">Shop&nbspNow</a>
+        <a href="backend.html" class="btn" id="btn1" style="background-color: #43beac;">Shop&nbspNow</a>
         <a class="btn btn-outline-light" id="btn1" style="color: white;">More&nbspinfo</a>
       </div>
     </div>
@@ -118,7 +118,7 @@
 <!-- Beginning of Showoff Section-->
 <section class="Available pt-3">
   <div class="container">
-    <h2 class="text-center"> -Available&nbspCars-</h2>
+    <h2 class="text-center" id="Available"> -Available&nbspCars-</h2>
     <h3 class="text-center">Types</h3>
   </div>
   <div class="container">
@@ -285,6 +285,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
       <script src="Javascript.js"> </script>
       <script src="count123.js"></script>
+      
    
   </body>
 </html>
