--- a/backend.html
+++ b/backend.html
@@ -41,7 +41,7 @@
 <!-- Navbar ends here-->
 <div class="text-center"style="
 margin-top: 100px;">
-    <img src="Images/Sad kermit.jpg" style="height: fit-content">
+    <img src="Images/Sad kermit.jpg" style="height: fit-content; width: fit-content;">
 </div>
 <h1 id="backend" > No one paid me to make this website</h1>
 <h2 id="backend"> So Don't waste your time<br> clicking anywhere</h2>
