--- a/backend.html
+++ b/backend.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
 <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="icon" href="Images/Cars logo.png" type="image/x-icon">
@@ -40,8 +39,8 @@
       </nav>
 <!-- Navbar ends here-->
 <div class="text-center"style="
-margin-top: 100px;">
-    <img src="Images/Sad kermit.jpg" style="height: fit-content; width: fit-content;">
+margin-top: 150px;">
+    <img class="img" src="Images/Sad kermit.jpg" style="height: 300px; width: 350px;">
 </div>
 <h1 id="backend" > No one paid me to make this website</h1>
 <h2 id="backend"> So Don't waste your time<br> clicking anywhere</h2>
@@ -50,5 +49,11 @@ margin-top: 100px;">
     #backend{
         font: bold;
         text-align: center;
+    }
+    @media (max-width: 577.98px) {
+        .img{
+            height: 120px;
+            width: 100px;
+        }
     }
 </style>
