--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="col-sm-5">
         <h3 class="header3">State of the art, World class Luxury Cars with embded anti-theft Technologies</h3>
         <a href="backend.html" class="btn" id="btn1" style="background-color: #43beac;">Shop&nbspNow</a>
-        <a class="btn btn-outline-light" id="btn1" style="color: white;">More&nbspinfo</a>
+        <a href="backend.html" class="btn btn-outline-light" id="btn1" style="color: white;">More&nbspinfo</a>
       </div>
     </div>
     </div>
@@ -77,7 +77,7 @@
           <img src="Images/Profileimg.png" style="height: 280px; width: 280px; padding: 20px; border-radius: 50%;" >
           <p style="font-size: 18px;">My name is Shivam Sharma <u><b>CEO&nbspof&nbsp<i>&nbspMAVIHSS&nbspMOTOCORPS</i></u></b></p>
           <p> And we assure you to give you fine products finer than our kidneys</p>
-          <a href="#" class="btn btn-outline-dark" >More Info</a><br>
+          <a href="backend.html"  class="btn btn-outline-dark" >More Info</a><br>
         </section>
       </div>
       <div class="col-sm-4 p-0">
@@ -86,7 +86,7 @@
           <div class="line3"></div>
           <p style="font-size: 20px;">We also have great ranges of Cyberpunk cars all of which can definetrly fit in your budget</p>
           <p>*Only if you are a kid of insanely rich brat*</p>
-          <a href="#" class="btn btn-outline-dark">More Info</a><br><br>
+          <a href="backend.html" class="btn btn-outline-dark">More Info</a><br><br>
           <img src="Images/Cyberpunk.jpg" id="cybertruckimg1" >
         </section>
       </div>
@@ -97,7 +97,7 @@
           <div class="container-fluid">
             <h2 class="vintage-text"> Vintage Collections</h2>
             <p class="vintage-text1"> WE also have wide range of vintage cars which are more vintage than any vintage cars u see anywhere..They are the vintages of Vintage</p>
-            <a href="#" class="btn btn-outline-light ">Read more</a>
+            <a href="backend.html" class="btn btn-outline-light ">Read more</a>
           </div>
         </section>
       </div>
@@ -106,7 +106,7 @@
         <section class="customs">
           <h2 id="customss">Customss</h2>
           <p style="font-size: 20px;">For customizing your fav car</p>
-          <a href="#" class="btn btn-outline-dark">Contact here.</a>
+          <a href="backend.html" class="btn btn-outline-dark">Contact here.</a>
           <img src="Images/Custom_cars.jpg" id="Customs1" >
         </section>
       </div>
@@ -125,51 +125,51 @@
     <div class="row m-3 roww">
       <div class="col Gallery">
           <img style="max-width: 300px;max-height: 150px;" src="Images/Rolls_Royce_Phantom_sedan.jpg" alt="Sedan">
-        <h4 id="Gallery_caption">Sedan</h4>
+        <h4 href="backend.html" id="Gallery_caption">Sedan</h4>
       </div>
       <div class="col Gallery">
           <img style="min-width: 300px;max-height: 150px;"src="Images/Maserati MC20 Coupé 5.jpg" alt="Coupe">
-          <h4 id="Gallery_caption">Coupe</h4>
+          <h4 href="backend.html" id="Gallery_caption">Coupe</h4>
       </div>
       <div class="col Gallery">
         <img style="min-width: 300px;max-height: 150px;"src="Images/Suv.png" alt="SUV">
-        <h4 id="Gallery_caption">SUV</h4>
+        <h4 href="backend.html" id="Gallery_caption">SUV</h4>
       </div>
       <div class="col Gallery">
         <img style="min-width: 300px;max-height: 150px;"src="Images/Crossover.webp" alt="Crossover">
-        <h4 id="Gallery_caption">CROSSOVER</h4>
+        <h4 href="backend.html" id="Gallery_caption">CROSSOVER</h4>
       </div>
       <div class="col Gallery">
         <img style="min-width: 300px;max-height: 150px;"src="Images/Audi A6 hatchback.webp" alt="HAtchback">
-        <h4 id="Gallery_caption">Hatchback</h4>
+        <h4 href="backend.html" id="Gallery_caption">Hatchback</h4>
       </div>
       <div class="col Gallery">
         <img style="min-width: 300px;max-height: 150px;"src="Images/Convertible.webp" alt="Convertible">
-        <h4 id="Gallery_caption">Convertible</h4>
+        <h4 href="backend.html" id="Gallery_caption">Convertible</h4>
       </div>
       <div class="col Gallery">
         <img style="min-width: 300px;max-height: 150px;"src="Images/Sports CAr.jpg" alt="Sportscar">
-        <h4 id="Gallery_caption">SPORTS CAR</h4>
+        <h4 href="backend.html" id="Gallery_caption">SPORTS CAR</h4>
       </div>
       <div class="col Gallery">
         <img style="min-width: 300px;max-height: 150px;"src="Images/Pickup Truck.png" alt="pickuptruck">
-        <h4 id="Gallery_caption">Pickup&nbspTruck</h4>
+        <h4 href="backend.html" id="Gallery_caption">Pickup&nbspTruck</h4>
       </div>
       <div class="col Gallery">
         <img style="min-width: 300px;max-height: 150px;"src="Images/Minivan.jpg" alt="Minivan">
-        <h4 id="Gallery_caption">Minivan/Van</h4>
+        <h4 href="backend.html" id="Gallery_caption">Minivan/Van</h4>
       </div>
       <div class="col Gallery">
         <img style="min-width: 300px;max-height: 150px;"src="Images/Luxury cars.jpg" alt="SUV">
-        <h4 id="Gallery_caption">Luxury Car</h4>
+        <h4 href="backend.html" id="Gallery_caption">Luxury Car</h4>
       </div>
       <div class="col Gallery">
         <img style="min-width: 300px;max-height: 150px;"src="Images/Convertible.webp" alt="SUV">
-        <h4 id="Gallery_caption">Hybrid</h4>
+        <h4 href="backend.html" id="Gallery_caption">Hybrid</h4>
       </div>
       <div class="col Gallery">
         <img style="min-width: 300px;max-height: 150px;"src="Images/And more..webp" alt="SUV">
-        <h4 id="Gallery_caption">And more...</h4> 
+        <h4 href="backend.html" id="Gallery_caption">And more...</h4> 
       </div>
     </div>
   </div><br>
