--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <!-- Navbaar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top"  >
         <div class="container-fluid">
           <a class="navbar-brand" style="font-size: 30px;" href="#"><i class="fas fa-car"></i>&nbspMavihss Motors</a>
